--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(IzakayaCheater VERSION 0.1.0 LANGUAGES C CXX)
 configure_file("${PROJECT_SOURCE_DIR}/config.h.in" "${PROJECT_SOURCE_DIR}/config.h")
+set (${PROJECT_NAME}_VERSION_MAJOR 0)
+set (${PROJECT_NAME}_VERSION_MINOR 1)
 
 include(CTest)
 enable_testing()
@@ -19,4 +21,17 @@ set(CMAKE_CXX_FLAGS "-mwindows -std=c++11 ${CMAKE_CXX_FLAGS}")
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+set(CPACK_NSIS_EXECUTABLES_DIRECTORY ".")
+
+#安装编译的文件
+install(TARGETS ${PROJECT_NAME}
+        RUNTIME DESTINATION "bin" )
+
+
+#拷贝单个文件至安装目录
+install(FILES
+        "${PROJECT_SOURCE_DIR}/README.md"
+        "${PROJECT_SOURCE_DIR}/LICENSE"
+        DESTINATION "bin")
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
 include(CPack)
