--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5.0)
-project(IzakayaCheater VERSION 0.1.1 LANGUAGES C CXX)
+project(IzakayaCheater VERSION 0.1.2 LANGUAGES C CXX)
 configure_file("${PROJECT_SOURCE_DIR}/config.h.in" "${PROJECT_SOURCE_DIR}/config.h")
 set (${PROJECT_NAME}_VERSION_MAJOR 0)
 set (${PROJECT_NAME}_VERSION_MINOR 1)
@@ -7,7 +7,7 @@ set (${PROJECT_NAME}_VERSION_MINOR 1)
 include(CTest)
 enable_testing()
 
-set(SRCS main.cpp ui/ui.cpp MyMainFrame.cpp utils.cpp MyAboutFrame.cpp)
+set(SRCS main.cpp ui/ui.cpp MyMainFrame.cpp utils.cpp MyAboutDialog.cpp)
 
 add_executable(IzakayaCheater ${SRCS})
 
